docs/k0s/hubble-ui-tailscale.yaml
apiVersion: v1
kind: Service
metadata:
  name: hubble-ui-tailscale
  namespace: ingress-nginx
  annotations:
    tailscale.com/hostname: hubble-ui
    tailscale.com/proxy-group: lab-ingress
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
