docs/k0s/echo-server.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: echo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-server
  namespace: echo
  labels:
    app.kubernetes.io/name: echo-server
    app.kubernetes.io/version: 0.9.2
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: echo-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: echo-server
    spec:
      containers:
        - name: echo-server
          image: ealen/echo-server:0.9.2
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: http
          livenessProbe:
            httpGet:
              path: /
              port: http
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: echo-server
  namespace: echo
spec:
  selector:
    app.kubernetes.io/name: echo-server
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: echo
  namespace: echo
  labels:
    external-dns: enabled
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    cert-manager.io/private-key-algorithm: ECDSA
    cert-manager.io/private-key-size: "256"
spec:
  gatewayClassName: tailscale
  listeners:
    - name: https
      hostname: echo.playground.canhdinh.com
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: Same
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: echo-playground-canhdinh-com-tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo
  namespace: echo
  annotations:
    external-dns.kubernetes.io/cloudflare-proxied: "false"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: echo
      sectionName: https
  hostnames:
    - echo.playground.canhdinh.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: echo-server
          port: 80
